--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test": "vue-cli-service build --mode test"
   },
   "dependencies": {
+    "animate.css": "^4.1.0",
+    "axios": "^0.19.2",
+    "babel-plugin-component": "^1.1.1",
+    "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.4",
+    "echarts": "^4.8.0",
+    "element-ui": "^2.13.2",
+    "jquery": "^3.5.1",
+    "js-table2excel": "^1.0.3",
+    "path": "^0.12.7",
+    "video.js": "^7.8.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
