--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.4",
     "echarts": "^4.8.0",
+    "echarts-liquidfill": "^2.0.6",
     "element-ui": "^2.13.2",
     "jquery": "^3.5.1",
     "js-table2excel": "^1.0.3",
