--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "jquery": "^3.5.1",
     "js-table2excel": "^1.0.3",
     "path": "^0.12.7",
-    "video.js": "^7.8.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
