--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV = 'development'
 # must start with VUE_APP_
 VUE_APP_ENV = 'development'
-VUE_APP_BASE_API = '/api'
-VUE_APP_BASE_URL = 'https://api.cnwgun.com'
+VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_URL = '192.168.20.95:88/'
