--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 NODE_ENV='production'
 # must start with VUE_APP_
 VUE_APP_ENV = 'production'
-VUE_APP_BASE_API = '/api'
-VUE_APP_BASE_URL = 'https://api456.cnwgun.com'
+VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_URL = '192.168.20.95:88/'
+
